<resources>
    <string name="app_name">InstaClone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up.</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in.</string>
    <string name="log_in_button_text">Log in</string>
    <string name="age">Age</string>
    <string name="get_help_logging_in">Get help logging in.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>
    <string name="login_help">Login help</string>
    <string name="logout">Logout</string>
    <string name="sign_out">Sign out</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>



</resources>